# AdventOfCode

./: README.md
2024/: .gitignore  CMakeLists.txt
2024/include/lib/days/: day_one.hpp
2024/include/lib/utils/: file_reader.hpp
2024/lib/: CMakeLists.txt
2024/lib/days/: day_one.cpp
2024/lib/utils/: file_reader.cpp
2024/src/: CMakeLists.txt  aoc.cpp
2024/tests/: CMakeLists.txt
2024/tests/days/: test_day_one.cpp
