set(TARGET_APP AoC)

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/src)

set(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/aoc.cpp
)

add_executable(${TARGET_APP} ${SOURCES})
target_include_directories(${TARGET_APP} PRIVATE ${INCLUDE_DIR})
target_link_libraries(${TARGET_APP} PUBLIC ${TARGET_LIBRARY})

set(BINARY_OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)
set(BINARY_OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)

set_target_properties(${TARGET_APP}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIR}"
)
